[project]
name = "parking-reservation-system"
version = "0.1.0"
description = "Multi-agent employee parking reservation system built with Google ADK 2.0"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=2.0.0",
    "google-cloud-aiplatform>=1.158.0",
]

[tool.uv]
package = false

[tool.pyrefly]
python_interpreter = ".venv/Scripts/python.exe"
